--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,13 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<ul>
+  <li>
+    <LinkTo @route="login">Login</LinkTo>
+  </li>
+  <li>
+    <LinkTo @route="playlists">Playlists</LinkTo>
+  </li>
+  <li>
+    <LinkTo @route="about">About</LinkTo>
+  </li>
+</ul>
 
 {{outlet}}
